[project]
name = "data-acquisition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "html5lib>=1.1",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "lxml>=6.0.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
]
